--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
+    "nodemon": "^3.1.0",
     "sequelize": "^6.21.3",
     "sequelize-cli": "^6.6.2"
   }
