--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-DB_USERNAME=root   
-DB_PASS=root
-DB_DATABASE=Disney_DB
-DB_PORT=3306
-DB_HOST:127.0.0.1
+DB_USERNAME=
+DB_PASS=
+DB_DATABASE=
+DB_PORT=
+DB_HOST=
